%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: EnemyDragonAnimator
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: isStartingFlying
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isFlying
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isEndingFlying
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isTurningFlying
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isWalking
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isTurningWalking
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isPosing
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110267639}
  m_DstState: {fileID: 110289730}
  m_TransitionDuration: .160256416
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isStartingFlying
    m_EventTreshold: 0
    m_ExitTime: .839743614
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110107062
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110294011}
  m_DstState: {fileID: 110267639}
  m_TransitionDuration: .446428567
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isEndingFlying
    m_EventTreshold: 0
    m_ExitTime: .553571463
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110115137
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110283257}
  m_DstState: {fileID: 110267639}
  m_TransitionDuration: 3.125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isPosing
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110137862
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110201429}
  m_DstState: {fileID: 110267639}
  m_TransitionDuration: .160256416
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isWalking
    m_EventTreshold: 0
    m_ExitTime: .839743614
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110141526
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110267639}
  m_DstState: {fileID: 110283257}
  m_TransitionDuration: .160256416
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isPosing
    m_EventTreshold: 0
    m_ExitTime: .839743614
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110145087
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110267639}
  m_DstState: {fileID: 110201429}
  m_TransitionDuration: .160256416
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isWalking
    m_EventTreshold: 0
    m_ExitTime: .839743614
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110145601
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289730}
  m_DstState: {fileID: 110289730}
  m_TransitionDuration: .446428567
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .553571463
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110154720
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110201429}
  m_DstState: {fileID: 110262555}
  m_TransitionDuration: .160256416
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isTurningWalking
    m_EventTreshold: 0
    m_ExitTime: .839743614
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110155760
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110267639}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .160256416
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isFlying
    m_EventTreshold: 0
    m_ExitTime: .839743614
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110159245
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110273961}
  m_TransitionDuration: .160256416
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isTurningFlying
    m_EventTreshold: 0
    m_ExitTime: .839743614
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110174638
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110262555}
  m_DstState: {fileID: 110201429}
  m_TransitionDuration: .115740739
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isTurningWalking
    m_EventTreshold: 0
    m_ExitTime: .884259284
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110177844
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289730}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .446428567
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isStartingFlying
    m_EventTreshold: 0
    m_ExitTime: .553571463
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110189322
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110294011}
  m_TransitionDuration: .160256416
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isEndingFlying
    m_EventTreshold: 0
    m_ExitTime: .839743614
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110199092
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110273961}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .127551019
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isTurningFlying
    m_EventTreshold: 0
    m_ExitTime: .872448981
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Fly
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 00bf7665837336f4d9aebd228af0be5e, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -276, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110201429
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Walk
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400012, guid: 00bf7665837336f4d9aebd228af0be5e, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 228, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110262555
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: WalkTurn
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400014, guid: 00bf7665837336f4d9aebd228af0be5e, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 228, y: 48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110264836
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: New State
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 80, y: -8, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110267639
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400008, guid: 00bf7665837336f4d9aebd228af0be5e, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -36, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110273961
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: FlyTurn
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 00bf7665837336f4d9aebd228af0be5e, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -540, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110283257
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PoseLib
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400010, guid: 00bf7665837336f4d9aebd228af0be5e, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -36, y: 36, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110289730
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: FlyStart
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 00bf7665837336f4d9aebd228af0be5e, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -300, y: 24, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110294011
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: FlyEnd
  m_Speed: -1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 00bf7665837336f4d9aebd228af0be5e, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -288, y: 216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110289730}
  - {fileID: 110273961}
  - {fileID: 110267639}
  - {fileID: 110283257}
  - {fileID: 110201429}
  - {fileID: 110262555}
  - {fileID: 110294011}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110189322}
      - {fileID: 110159245}
    data:
      first: {fileID: 110289730}
      second:
      - {fileID: 110177844}
    data:
      first: {fileID: 110273961}
      second:
      - {fileID: 110199092}
    data:
      first: {fileID: 110267639}
      second:
      - {fileID: 110100000}
      - {fileID: 110145087}
      - {fileID: 110141526}
      - {fileID: 110155760}
    data:
      first: {fileID: 110283257}
      second:
      - {fileID: 110115137}
    data:
      first: {fileID: 110201429}
      second:
      - {fileID: 110137862}
      - {fileID: 110154720}
    data:
      first: {fileID: 110262555}
      second:
      - {fileID: 110174638}
    data:
      first: {fileID: 110294011}
      second:
      - {fileID: 110107062}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -96, y: -96, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
